--- a/jmeter/jmeter.properties
+++ b/jmeter/jmeter.properties
@@ -1034,6 +1034,7 @@ view.results.tree.renderers_order=.RenderAsText,.RenderAsRegexp,.RenderAsCssJQue
 # The given value is in addition to any jars found in the lib/ext directory.
 # Do not use this for utility ir plugin dependecy jars.
 #search_paths=/app1/lib;/app2/lib
+search_paths=.;jmeter;plugins;lib/ext
 
 # List of paths that JMeter will search for utility and plugin dependency classes.
 # Use your platform path separator to separate multiple paths.
@@ -1087,3 +1088,5 @@ system.properties=system.properties
 # Comma separated list of files that contain reference to templates and their description
 # Path must be relative to jmeter root folder
 #template.files=/bin/templates/templates.xml
+saveservice_properties=/jmeter/saveservice.properties
+upgrade_properties=/jmeter/upgrade.properties
