Updated Jmeter Ivy Configurations, and manifest classpath to match lib location in oasis

--- a/build.xml
+++ b/build.xml
@@ -120,7 +120,7 @@
 	  <mapper>
 		<chainedmapper>
 		   <flattenmapper/>
-		   <globmapper from="*.jar" to="../lib/ivy/*.jar"/>
+		   <globmapper from="*.jar" to="../lib/jmeter/*.jar"/>
 		</chainedmapper>
 	  </mapper>
 	</pathconvert>
